[gd_scene load_steps=2 format=3 uid="uid://bglj80ke8u666"]

[ext_resource type="Script" path="res://Start_Menu.gd" id="1_jirpb"]

[node name="Start_Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jirpb")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -418.0
offset_top = -278.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="play_game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Options"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/play_game" to="." method="_on_play_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credits" to="." method="_on_quit_pressed"]
